--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,4 +24,6 @@ jobs:
       -
         name: Build
         run: |
-          docker build --platform "linux/amd64,linux/arm64" --push . --file Dockerfile --tag decent-e/cpu:$(date +%s) # will run buildx
+          docker build --platform "linux/amd64,linux/arm64" --push . --file Dockerfile --tag ghcr.io/decent-e/cpu:$(date +%s) # will run buildx
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
